--- a/终端命令.css
+++ b/终端命令.css
@@ -16,3 +16,7 @@ http-server <path_of_project>
 http-server <path> -a 0.0.0.0 -p 8080
 1
 参数-a是监听地址，而参数-p是修改监听端口。
+
+2同步vcode插件和设置
+GitHub Token: ad9a98bcc7f254341740783ac1b01a5bff073705
+GitHub Gist: 5d8062564fb505b1d947837a8d469c6f
