--- a/文档/css积累的知识点.css
+++ b/文档/css积累的知识点.css
@@ -30,3 +30,7 @@ color: rgb(0, 0, 0);
 2、使用12px及12px以上字体大小：为了兼容各大主流浏览器，建议设计美工图时候设置大于或等于12px的字体大小，如果是接单的这个时候就需要给客户讲解小于12px浏览器不兼容等事宜。
 3、继续使用小于12px字体大小样式设置：如果不考虑chrome可以不用考虑兼容，同时在设置小于12px对象设置-webkit-text-size-adjust:none，做到最大兼容考虑。
 4、使用12px以上字体：为了兼容、为了代码更简单 从新考虑权重下兼容性。
+
+
+4、隐藏滚动条但还可以滚动
+body::-webkit-scrollbar {display:none}
